syntax = "proto3";
option csharp_namespace = "OdysseyServer.ApiClient";

package library;

message Character
    {
        int64 id = 1;
        string name = 2; 
        int32 power = 3;
        int32 xp = 4;
        int32 level = 5;
        int32 gearTier = 6;
        repeated Ability abilities = 7;
        repeated Group groups = 8;
        bytes rowVersion = 9;
        int32 xpToNextLevel = 10;
        int32 offence = 11;
        int32 defence = 12;
        int32 health = 13;
    }
       
message Ability
    {
        int64 id = 1;
        string name = 2;
        int32 level = 3;
        int32 requiredLevel = 4;
        AbilityStats stats = 5;
        bytes rowVersion = 6;
        int32 abilityType = 7;
}
message AbilityStats
    {
        int64 id = 1;
        int32 attack = 2;
        int32 defence = 3;
        bytes rowVersion = 4;
}

message AllCharacter
{
    repeated Character characters = 1;
}

message AllAbility
{
    repeated Ability abilities = 1;
}

message Group
    {
        int64 id = 1;
        string name = 2;
        string iconName = 3;
        bytes rowVersion = 4;
}

message AllGroup
{
        repeated Group groups = 1;
}

message CharacterAddGroupRequest
{
    int64 characterId = 1;
    repeated int64 groupIds = 2;
}

message CharacterAddGroupResponse
{
    Character character = 1;
}

message CharacterLevelBoostRequest
{
    int64 characterId = 1;
    int32 levelNumber = 2;
}

message CharacterLevelBoostResponse
{
    Character character = 1;
}

message CharacterAddAbilitiesRequest
{
    int64 characterId = 1;
    repeated int64 abilities = 2;
}

message CharacterAddAbilitiesResponse
{
    Character character = 1;
}

message CharacterUpdateRequest
{
    Character character = 1;
}

message CharacterUpdateResponse
{
    Character character = 1;
}

message CharacterCreateRequest
{
    Character character = 1;
}

message CharacterCreateResponse
{
    Character character = 1;
}

message CharacterGetRequest
{
    int64 characterId = 1;
}

message CharacterGetResponse
{
    Character character = 1;
}

message AbilityGetRequest
{
    int64 abilityId = 1;
}

message AbilityGetResponse
{
    Ability ability = 1;
}

message AbilityAddRequest
{
    Ability ability = 1;
}

message AbilityAddResponse
{
    Ability ability = 1;
}

message AbilityUpdateRequest
{
    Ability ability = 1;
}

message AbilityUpdateResponse
{
    Ability ability = 1;
}

message CharacterAbilityBoostRequest
{
    int64 abilityId = 1;
    int64 characterId = 2;
}

message CharacterAbilityBoostResponse
{
    Character character = 1;
}

message AbilityAllResponse
{
    AllAbility ability = 1;
}

message CharacterAllResponse
{
    AllCharacter character = 1;
}

message GroupAddRequest
{
    Group group = 1;
}

message GroupAddResponse
{
    Group group = 1;
}

message GroupAllResponse
{
     AllGroup groups = 1;
}

message GroupByIdResponse
{
     Group group = 1;
}
message GroupByIdRequest
{
     int64 groupId = 1;
}

message GroupDeleteRequest
{
     int64 groupId = 1;
}





